# creeper-qt

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  header.py
.github/workflows/: example-build.yml  nightly-build.yml
cmake/: collect.cmake  creeper-qtConfig.cmake.in  install.cmake  package.cmake
creeper-qt/: core.hh  creeper-qt.hh  layout.hh  utility.hh  widget.hh
creeper-qt/core/: application.hh
creeper-qt/layout/: flow.cc  grid.hh  group.hh  linear.hh  mixer.hh  mutual-exclusion-group.hh  scroll.cc  scroll.hh  stacked.hh
creeper-qt/utility/: content-scale.hh  material-icon.hh  mini-bus.hh  painter-resource.hh  trait.hh
creeper-qt/utility/animation/: animatable.cc  animatable.hh  core.hh  event.hh  gradient-color.hh  hover-color.hh  math.hh  motion-system.hh  transition-impl.hh  transition.cc  transition.hh  water-ripple.hh
creeper-qt/utility/animation/state/: linear.hh  pid.hh  spring.hh
creeper-qt/utility/math/: lattice.hh
creeper-qt/utility/painter/: common.hh  container.hh  helper.hh  shape.hh
creeper-qt/utility/qt_wrapper/: enter_event.hh  margin_setter.hh
creeper-qt/utility/solution/: round-angle.cc
creeper-qt/utility/theme/: color-scheme.hh  color-template.hh  theme.cc  theme.hh
creeper-qt/utility/trait/: widget.hh
creeper-qt/utility/wrapper/: common-property.hh  common.hh  layout.hh  mutable-value.hh  mutable.hh  pimpl.hh  property.hh  singleton.hh  widget.hh
creeper-qt/widget/: dropdown-menu.cc  dropdown-menu.hh  dropdown-menu.impl.hh  image.cc  image.hh  image.impl.hh  main-window.cc  main-window.hh  mixer.hh  select.cc  select.hh  select.impl.hh  sliders.cc  sliders.hh  sliders.impl.hh  snackbar.cc  snackbar.hh  switch.cc  switch.hh  switch.impl.hh  text-fields.cc  text-fields.hh  text-fields.impl.hh  text.hh  widget.cc  widget.hh
creeper-qt/widget/button/: button.cc  button.hh  filled-button.cc  filled-button.hh  filled-tonal-button.hh  icon-button.hh  outlined-button.hh  text-button.hh
creeper-qt/widget/buttons/: button.hh  filled-button.cc  filled-button.hh  filled-tonal-button.hh  icon-button.cc  icon-button.hh  icon-button.impl.hh  outlined-button.hh  text-button.hh
creeper-qt/widget/cards/: basic-card.hh  elevated-card.hh  filled-card.hh  outlined-card.hh
creeper-qt/widget/custom/: widget.hh
creeper-qt/widget/indicator/: circular-progress-indicator.hh
creeper-qt/widget/shape/: ellipse.hh  rounded-rect.hh  shape.hh  wave-circle.hh
doc/: layout.md  theme.md  usage.md  widgets.md
example/: CMakeLists.txt  clock.cc  deploy-linux.sh  deploy-windows.sh  deploy.sh  keyboard.cc  timer.cc  widgets.cc  widgets.cmake
example/bluetooth/: main.cc
example/camare-capture/: .clang-format  CMakeLists.txt  self.qrc
example/camare-capture/src/: main.cc  video.cc  video.hh  window.cc  window.hh
example/clock/: CMakeLists.txt  clock.cc
example/hello-world/: CMakeLists.txt  main.cc  window.cc  window.hh
example/item-selecter/: CMakeLists.txt  main.cc  window.cc  window.hh
example/keyboard/: CMakeLists.txt  keyboard.cc
example/select-question/: CMakeLists.txt  main.cc  window.cc
example/widgets/: CMakeLists.txt  component.hh  list.cc  main.cc  nav.cc  top-area.hh  top-left-area.cc  top-right-area.cc  view.cc  widgets.cc  widgets.cmake
example/widgets/component/: document.cc  document.hh
example/widgets/components/: asset-center.cc  asset-center.hh  display-board.cc  display-board.hh  list.cc  nav.cc  view-page.cc  view.cc
example/widgets/util/: download.cc  download.hh  executor.hh  httplib.hh  proxy.cc  proxy.hh  string.hh
example/words-drop/: CMakeLists.txt  main.cc  window.cc  window.hh
example/长途汽车信息管理系统/: CMakeLists.txt  database.yaml  main.cc  resource.qrc  window.cc
example/长途汽车信息管理系统/database/: mysql.cc  mysql.hh.hide
example/长途汽车信息管理系统/page/: login.cc  login.hh
example/长途汽车信息管理系统/page/workbench/: operator.cc  operator.hh  top-area.cc  top-area.hh  top-center-area.cc  top-left-area.cc  top-right-area.cc  view.cc  workbench.cc  workbench.hh
example/长途汽车信息管理系统/page/workbench/view/: about-us.hh  dashboard.hh  database.hh  map-check.hh  view.cc  view.hh
export/archlinux/: PKGBUILD
include/creeper-qt/: container.hh
include/creeper-qt/container/: linear.hh
include/creeper-qt/module/: round-icon-button.hh  scallop-clock.hh  switch-card.hh
include/creeper-qt/setting/: style-template.hh  theme.cc  theme.hh
include/creeper-qt/utility/: math.hh  pid.hh
include/creeper-qt/widget/: basic-shape.hh  concave-slider.cc  concave-slider.hh  convex-slider.hh  image.cc  image.hh  label.hh  line-edit.cc  line-edit.hh  list-widget.cc  list-widget.hh  main-window.cc  main-window.hh  push-button.cc  push-button.hh  slider.hh  slider.hpp  switch-button.cc  switch-button.hh  wave-circle.cc  wave-circle.hh  widget.hh
res/: creeper-qt-resource.qrc  resource.qrc
res/common-blue/: theme.yaml
res/common-green/: theme.yaml
res/common-grey/: theme.yaml
res/common-white/: theme.yaml
res/common-white/qss/: icon-button.qss  line-edit.qss  push-button.qss
res/common-white/yaml/: theme.yaml
res/qss/common-white/: push-button.qss
src/: main.cc
src/creeper-qt/core/: application.hh
src/creeper-qt/layout/: flow.hh  grid.hh  group.hh  lazy.hh  linear.hh  mixer.cc  mixer.hh  mutual-exclusion-group.hh  scroll.hh  stacked.hh
src/creeper-qt/module/: round-icon-button.hh  switch-card.hh
src/creeper-qt/res/: resource.qrc
src/creeper-qt/setting/: theme.hh
src/creeper-qt/utility/: material-icon.hh  painter-resource.hh
src/creeper-qt/widget/: dropdown-menu.hh  dropdown-menu.impl.hh  image.hh  image.impl.hh  line-edit.hh  list-widget.hh  main-window.hh  push-button.hh  sliders.cc  sliders.hh  snackbar.hh  switch-button.hh  switch.cc  switch.hh  text-fields.hh  text-fields.impl.hh  text.hh  widget.hh
src/setting/: theme.hh
src/setting/color/: common-white.hh
src/utility/: pid.hh  single.hh
src/widget/: button.hh  line-edit.hh  list-widget.hh  main-window.hh  push-button.hh  switch-button.hh  widget.hh
test/: CMakeLists.txt
test/utility/: mini-bus.cc
(+45 files in other folders)
